added missing tests of xml data structures